# paperplane-detikzify

./: .gitignore  DEPLOY.md  Dockerfile  clean_space.sh  create_dummy_image.py  fix_cuda.sh  get_public_url.sh  pyproject.toml  run.sh  run_detikzify.sh  setup.sh  start_server.sh  test_api.py  user_data.sh
detikzify/: api.py
detikzify/evaluate/: __init__.py  imagesim.py
detikzify/infer/: generate.py  gpt4_preprocess.py  gpt4_vision.py
detikzify/model/: __init__.py
detikzify/model/v1/: configuration_detikzify.py  modeling_detikzify.py
detikzify/util/: __init__.py
detikzify/webui/: __main__.py  helpers.py  webui.py
